--- a/_config.yml
+++ b/_config.yml
@@ -2,3 +2,4 @@ theme: jekyll-theme-cayman
 remote_theme: jekyll-theme-cayman
 title: [ADF&G Commerical Fisheries Code Repositorys]
 description: [A short description of your site's purpose]
+baseurl: commfish.github.io
